syntax = "proto3";

package com.wabenet.dodo.core.v1alpha4;

option go_package = "github.com/wabenet/dodo-core/api/v1alpha4";

message PluginName {
  string type = 1;
  string name = 2;
}

message PluginInfo {
  PluginName name = 1;
  repeated PluginName dependencies = 2;
  map<string, string> fields = 3;
}

message InitPluginResponse {
  map<string, string> config = 1;
}

message InputData {
  bytes data = 1;
}

message OutputData {
  enum Channel {
    INVALID = 0;
    STDOUT = 1;
    STDERR = 2;
  }

  Channel channel = 1;
  bytes data = 2;
}
