syntax = "proto3";

package com.wabenet.dodo.core.v1alpha4;

option go_package = "github.com/wabenet/dodo-core/api/v1alpha4";

import "google/protobuf/empty.proto";
import "api/v1alpha4/plugin.proto";
import "api/v1alpha4/backdrop.proto";

service RuntimePlugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha4.PluginInfo);
  rpc InitPlugin(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha4.InitPluginResponse);
  rpc ResetPlugin(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc StreamRuntimeInput(stream com.wabenet.dodo.core.v1alpha4.InputData) returns (google.protobuf.Empty);
  rpc StreamRuntimeOutput(google.protobuf.Empty) returns (stream com.wabenet.dodo.core.v1alpha4.OutputData);

  rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse);
  rpc DeleteContainer(DeleteContainerRequest) returns (google.protobuf.Empty);
  rpc StartContainer(StartContainerRequest) returns (google.protobuf.Empty);
  rpc StreamContainer(StreamContainerRequest) returns (StreamContainerResponse);
  rpc ResizeContainer(ResizeContainerRequest) returns (google.protobuf.Empty);
  rpc KillContainer(KillContainerRequest) returns (google.protobuf.Empty);

  rpc GetImage(GetImageRequest) returns (GetImageResponse);
}

message CreateContainerResponse {
  string container_id = 1;
}

message GetImageRequest {
  string image_spec = 1;
}

message CreateContainerRequest {
  com.wabenet.dodo.core.v1alpha4.Backdrop config = 1;
  bool tty = 2;
  bool stdio = 3;
}

message DeleteContainerRequest {
  string container_id = 1;
}

message StartContainerRequest {
  string container_id = 1;
}

message ResizeContainerRequest {
  string container_id = 1;
  uint32 height = 2;
  uint32 width = 3;
}

message StreamContainerRequest {
  string container_id = 1;
  uint32 height = 2;
  uint32 width = 3;
}

message KillContainerRequest {
  string container_id = 1;
  string signal = 2;
}

message StreamContainerResponse {
  int64 exitCode = 1;
  string message = 2;
}

message GetImageResponse {
  string image_id = 1;
}
